# PyIxExplorer

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README.rst  README.txt  Todo.txt  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  python-push.yml
ixexplorer/: __init__.py  ixe_app.py  ixe_dep.py  ixe_hw.py  ixe_object.py  ixe_pg.py  ixe_port.py  ixe_statistics.py  ixe_statistics_view.py  ixe_stream.py  pyixia.py
ixexplorer/api/: ixapi.py  tclproto.py
ixexplorer/data/: IxExplorer_attributes.xml  IxExplorer_commands.xml  IxExplorer_options.xml
ixexplorer/examples/: discover-chassis.py
ixexplorer/samples/: ixe_sample.py  ixe_samples.py  tcl_cli.py
ixexplorer/test/: IxExplorer.ini  ixe_samples.py  tcl_cli.py  test1.py  test_base.py  test_offline.py  test_ofline.py  test_online.py
ixexplorer/test/configs/: cap_config.prt  long_frame_config.prt  multi_errors_frame_config.prt  multiline_error.prt  stats_config.prt  stats_config_1.prt  stats_config_2.prt  test_config_1.prt  test_config_1.str  test_config_2.prt  test_config_2.str
tests/: IxExplorer.ini  __init__.py  conftest.py  ixe_samples.py  sandbox.py  sut.yaml  tcl_cli.py  test_base.py  test_config.py  test_offline.py  test_online.py
tests/configs/: cap_config.prt  good_to_bad_config.prt  test_config.prt  test_config.str  test_config_2.prt
