[metadata]
name = pyixexplorer
description = Python OO API package to manage Ixia IxExplorer traffic generator
url = https://github.com/shmir/PyIxExplorer/
author = Yoram Shamir
author_email = yoram@ignissoft.com
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
keywords = keysight, ixia, ixnetwork, ixload, spirent, testcenter, stc, avalanche, trex, xena, l2l3, l4l7, tg, traffic generator, test automation, automation api
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    paramiko
    pytrafficgen>=4.0.0,<4.1.0

[options.packages.find]
exclude =
    docs*
    tests*

[options.entry_points]
console_scripts =
    tcl_cli = ixexplorer.samples.tcl_cli:main

[isort]
profile=black

[mypy]
ignore_missing_imports = True
allow_untyped_calls = True
allow_untyped_defs = False
allow_incomplete_defs = False
follow_imports = skip
no_strict_optional = True
show_error_codes = True
